# OOP-Project

./: CMakeLists.txt  main.cpp
resources/classes/: Admin.cpp  Admin.h  Course.cpp  Course.h  Enrollment.cpp  Enrollment.h  Global.cpp  Global.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  User.cpp  User.h
resources/containers/: admins.h  courses.cpp  courses.h  enrollments.h  students.cpp  students.h  teachers.cpp  teachers.h
